Import of CREIN/Ceph-RadosGW-Admin-0.4.tar.gz from CPAN.
gitpan-cpan-distribution: Ceph-RadosGW-Admin
gitpan-cpan-version:      0.4
gitpan-cpan-path:         CREIN/Ceph-RadosGW-Admin-0.4.tar.gz
gitpan-cpan-author:       CREIN
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name	= Ceph-RadosGW-Admin
-version = 0.3
+version = 0.4
 author  = Chris Reinhardt <crein@cpan.org>
 license = Perl_5
 copyright_holder = Liquid Web Inc.
@@ -40,3 +40,4 @@ copyright_holder = Liquid Web Inc.
 	tag_format  = release-%v
 	allow_dirty = README.pod
 	allow_dirty = dist.ini
+	allow_dirty = Changes
